# termivoxed

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  config.py  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.ps1  setup.py  setup.sh  test_subtitle_burn.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml  stale.yml  sync-release.yml
assets/icons/: icon.icns
backend/: ffmpeg_utils.py  subtitle_utils.py  tts_service.py
backend/tts_providers/: __init__.py  base.py  coqui_provider.py  edge_tts_provider.py  registry.py  resilience.py
backups/web_ui_backup_20251214_170539/: requirements.txt  run.bat  setup.sh  start.sh
backups/web_ui_backup_20251214_170539/api/: __init__.py  export_worker.py  main.py
backups/web_ui_backup_20251214_170539/api/routes/: __init__.py  export.py  fonts.py  llm.py  projects.py  segments.py  settings_routes.py  timeline_ws.py  tts.py  videos.py
backups/web_ui_backup_20251214_170539/api/schemas/: __init__.py  export_schemas.py  llm_schemas.py  project_schemas.py  (+2 more)
backups/web_ui_backup_20251214_170539/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
build_tools/: bundle_ffmpeg.py  generate_update_keys.py  release.py  sign_release.py  verify_supply_chain.py
build_tools/desktop/: launcher.py  model_downloader.py
build_tools/macos/: build.sh  entitlements.plist  notarize.sh  setup.py
build_tools/signing_keys/: .gitignore  update_public_key.b64
build_tools/windows/: build.bat  build.ps1  build_windows.py  installer.iss  termivoxed.spec
cloud_functions/: firestore.rules  package.json
cloud_functions/functions/: index.js
core/: __init__.py  auto_updater.py  export_pipeline.py  layer_compositor.py  timeline_coordinator.py  video_combiner.py  watermark.py
docs/: CI_CD_COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  FIRESTORE_SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SETUP_CHECKLIST.md
docs/internal/: PRODUCTION_PLAN.md
models/: __init__.py  bgm_track.py  project.py  segment.py  video.py
reference/: FFmpeg_Video_Generation_Documentation.md
scripts/: dev.sh  release.sh
storage/: app_config.json  favorites.json
storage/projects/Check3/: project.json
storage/voice_samples/: Vyalikaval_HBCS_Layout_c5248539.m4a  metadata.json
subscription/: __init__.py  currency_handler.py  device_fingerprint.py  email_service.py  feature_gate.py  invoice_generator.py  license_guard.py  license_manager.py  models.py  phone_verification.py  privacy_consent.py  usage_tracker.py
test/: __init__.py
tests/: __init__.py  conftest.py  test_all_features.py  test_api_endpoints.py  test_ffmpeg_and_ai_timeline.py  test_realtime_api.py  test_timeline_calculations.py  test_tts_api.py  test_tts_providers.py  test_voice_cloning_comprehensive.py  test_voice_cloning_simple.py
ui/: README.md
web_ui/: =0.22.0  COMPREHENSIVE_CODEC_REFERENCE.md  README.md  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  start.sh
web_ui/api/: __init__.py  export_worker.py  main.py  model_worker.py  voice_clone_worker.py
web_ui/api/middleware/: __init__.py  auth.py  rate_limit.py  security_headers.py
web_ui/api/routes/: auth.py  consent.py  export.py  favorites.py  fonts.py  llm.py  models.py  ollama_setup.py  payments.py  projects.py  segments.py  settings_routes.py  subscription.py  timeline_ws.py  tts.py  videos.py
web_ui/api/schemas/: export_schemas.py  favorites_schemas.py  llm_schemas.py  project_schemas.py  segment_schemas.py  tts_schemas.py
web_ui/api/services/: intelligent_script_generator.py  langchain_providers.py  llm_service.py  ollama_setup.py  script_analyzer.py
web_ui/api/utils/: __init__.py  security.py  usage_tracker.py
web_ui/documentation/: FFMPEG_COMPREHENSIVE_ANALYSIS.md  TERMIVOXED_ANALYSIS_REPORT.md
web_ui/documentation/ffmpeg/: FFPROBE_ANALYSIS.md
web_ui/documentation/langchain/: anthropic.md  aws_bedrock.md  azure_openai.md  google_gemini.md  huggingface.md  messages.md  models.md  openai.md
web_ui/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web_ui/frontend/src/: App.tsx  index.css  main.tsx
web_ui/lxusbrain-website/: contact.html  index.html  privacy.html  refund.html  shipping.html  terms.html
web_ui/storage/cache/: tts_cache.json
(+123 files in other folders)
